Add metrics