@@ -11,6 +11,7 @@ import com.example.financeservice.model.Merchant;
 import com.example.financeservice.repository.AccountRepository;
 import com.example.financeservice.repository.ClientRepository;
 import com.example.financeservice.repository.MerchantRepository;
+import com.example.financeservice.service.metrics.MetricsService;
 import java.math.BigDecimal;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -18,7 +19,6 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-
 
 @Service
 @RequiredArgsConstructor
@@ -28,28 +28,35 @@ public class AccountService {
   private final AccountRepository accountRepository;
   private final ClientRepository clientRepository;
   private final MerchantRepository merchantRepository;
+  private final MetricsService metricsService;
 
   @Transactional(readOnly = true)
   public List<AccountDTO> getAllAccounts() {
     log.debug("Service: Getting all accounts");
 
-    List<Account> accounts = accountRepository.findAll();
+    List<Account> accounts = metricsService.recordRepositoryExecutionTime(
+        "AccountRepository", "findAll",
+        () -> accountRepository.findAll());
+
     log.debug("Service: Found {} accounts in database", accounts.size());
 
     return accounts.stream()
         .map(this::convertToDTO)
-        .collect(Collectors.toList());
+        .toList();
   }
 
   @Transactional(readOnly = true)
   public AccountDTO getAccountById(Long id) {
     log.debug("Service: Getting account with ID: {}", id);
 
-    Account account = accountRepository.findById(id)
-        .orElseThrow(() -> {
-          log.error("Service: Account not found with ID: {}", id);
-          return new ResourceNotFoundException("Account not found with id: " + id);
-        });
+    Account account = metricsService.recordRepositoryExecutionTime(
+        "AccountRepository", "findById",
+        () -> accountRepository.findById(id)
+            .orElseThrow(() -> {
+              log.error("Service: Account not found with ID: {}", id);
+              metricsService.recordExceptionOccurred("ResourceNotFoundException", "getAccountById");
+              return new ResourceNotFoundException("Account not found with id: " + id);
+            }));
 
     log.debug("Service: Found account with ID: {}, number: {}", id, account.getAccountNumber());
     return convertToDTO(account);
@@ -59,11 +66,16 @@ public class AccountService {
   public AccountDTO getAccountByNumber(String accountNumber) {
     log.debug("Service: Getting account with number: {}", accountNumber);
 
-    Account account = accountRepository.findByAccountNumber(accountNumber)
-        .orElseThrow(() -> {
-          log.error("Service: Account not found with number: {}", accountNumber);
-          return new ResourceNotFoundException("Account not found with number: " + accountNumber);
-        });
+    Account account = metricsService.recordRepositoryExecutionTime(
+        "AccountRepository", "findByAccountNumber",
+        () -> accountRepository.findByAccountNumber(accountNumber)
+            .orElseThrow(() -> {
+              log.error("Service: Account not found with number: {}", accountNumber);
+              metricsService.recordExceptionOccurred("ResourceNotFoundException",
+                  "getAccountByNumber");
+              return new ResourceNotFoundException(
+                  "Account not found with number: " + accountNumber);
+            }));
 
     log.debug("Service: Found account with number: {}, ID: {}", accountNumber, account.getId());
     return convertToDTO(account);
@@ -73,48 +85,66 @@ public class AccountService {
   public List<AccountDTO> getAccountsByClient(Long clientId) {
     log.debug("Service: Getting accounts for client with ID: {}", clientId);
 
-    Client client = clientRepository.findById(clientId)
-        .orElseThrow(() -> {
-          log.error("Service: Client not found with ID: {}", clientId);
-          return new ResourceNotFoundException("Client not found with id: " + clientId);
-        });
+    Client client = metricsService.recordRepositoryExecutionTime(
+        "ClientRepository", "findById",
+        () -> clientRepository.findById(clientId)
+            .orElseThrow(() -> {
+              log.error("Service: Client not found with ID: {}", clientId);
+              metricsService.recordExceptionOccurred("ResourceNotFoundException",
+                  "getAccountsByClient");
+              return new ResourceNotFoundException("Client not found with id: " + clientId);
+            }));
 
-    List<Account> accounts = accountRepository.findByClient(client);
+    List<Account> accounts = metricsService.recordRepositoryExecutionTime(
+        "AccountRepository", "findByClient",
+        () -> accountRepository.findByClient(client));
+
     log.debug("Service: Found {} accounts for client with ID: {}", accounts.size(), clientId);
 
     return accounts.stream()
         .map(this::convertToDTO)
-        .collect(Collectors.toList());
+        .toList();
   }
 
   @Transactional(readOnly = true)
   public List<AccountDTO> getAccountsByMerchant(Long merchantId) {
     log.debug("Service: Getting accounts for merchant with ID: {}", merchantId);
 
-    Merchant merchant = merchantRepository.findById(merchantId)
-        .orElseThrow(() -> {
-          log.error("Service: Merchant not found with ID: {}", merchantId);
-          return new ResourceNotFoundException("Merchant not found with id: " + merchantId);
-        });
+    Merchant merchant = metricsService.recordRepositoryExecutionTime(
+        "MerchantRepository", "findById",
+        () -> merchantRepository.findById(merchantId)
+            .orElseThrow(() -> {
+              log.error("Service: Merchant not found with ID: {}", merchantId);
+              metricsService.recordExceptionOccurred("ResourceNotFoundException",
+                  "getAccountsByMerchant");
+              return new ResourceNotFoundException("Merchant not found with id: " + merchantId);
+            }));
 
-    List<Account> accounts = accountRepository.findByMerchant(merchant);
+    List<Account> accounts = metricsService.recordRepositoryExecutionTime(
+        "AccountRepository", "findByMerchant",
+        () -> accountRepository.findByMerchant(merchant));
+
     log.debug("Service: Found {} accounts for merchant with ID: {}", accounts.size(), merchantId);
 
     return accounts.stream()
         .map(this::convertToDTO)
-        .collect(Collectors.toList());
+        .toList();
   }
 
   @Transactional
   public AccountDTO createClientAccount(CreateAccountDTO createAccountDTO) {
     log.debug("Service: Creating account for client with ID: {}", createAccountDTO.getOwnerId());
 
-    Client client = clientRepository.findById(createAccountDTO.getOwnerId())
-        .orElseThrow(() -> {
-          log.error("Service: Client not found with ID: {}", createAccountDTO.getOwnerId());
-          return new ResourceNotFoundException(
-              "Client not found with id: " + createAccountDTO.getOwnerId());
-        });
+    Client client = metricsService.recordRepositoryExecutionTime(
+        "ClientRepository", "findById",
+        () -> clientRepository.findById(createAccountDTO.getOwnerId())
+            .orElseThrow(() -> {
+              log.error("Service: Client not found with ID: {}", createAccountDTO.getOwnerId());
+              metricsService.recordExceptionOccurred("ResourceNotFoundException",
+                  "createClientAccount");
+              return new ResourceNotFoundException(
+                  "Client not found with id: " + createAccountDTO.getOwnerId());
+            }));
 
     Account account = new Account();
     account.setType(createAccountDTO.getType());
@@ -134,10 +164,24 @@ public class AccountService {
           createAccountDTO.getAvailableLimit());
     }
 
-    Account savedAccount = accountRepository.save(account);
+    Account savedAccount = metricsService.recordRepositoryExecutionTime(
+        "AccountRepository", "save",
+        () -> accountRepository.save(account));
+
     log.info(
         "Service: Account created successfully for client ID: {}, account number: {}, type: {}",
         client.getId(), savedAccount.getAccountNumber(), savedAccount.getType());
+
+    // Registrar métricas
+    metricsService.recordAccountCreated(savedAccount.getType().toString(), "CLIENT");
+
+    // Registrar o depósito inicial se houver
+    if (createAccountDTO.getInitialDeposit() != null
+        && createAccountDTO.getInitialDeposit().compareTo(BigDecimal.ZERO) > 0) {
+      metricsService.recordTransactionProcessed("DEPOSIT",
+          createAccountDTO.getInitialDeposit(), true);
+      metricsService.recordDailyFinancialVolume("DEPOSIT", createAccountDTO.getInitialDeposit());
+    }
 
     return convertToDTO(savedAccount);
   }
@@ -146,12 +190,16 @@ public class AccountService {
   public AccountDTO createMerchantAccount(CreateAccountDTO createAccountDTO) {
     log.debug("Service: Creating account for merchant with ID: {}", createAccountDTO.getOwnerId());
 
-    Merchant merchant = merchantRepository.findById(createAccountDTO.getOwnerId())
-        .orElseThrow(() -> {
-          log.error("Service: Merchant not found with ID: {}", createAccountDTO.getOwnerId());
-          return new ResourceNotFoundException(
-              "Merchant not found with id: " + createAccountDTO.getOwnerId());
-        });
+    Merchant merchant = metricsService.recordRepositoryExecutionTime(
+        "MerchantRepository", "findById",
+        () -> merchantRepository.findById(createAccountDTO.getOwnerId())
+            .orElseThrow(() -> {
+              log.error("Service: Merchant not found with ID: {}", createAccountDTO.getOwnerId());
+              metricsService.recordExceptionOccurred("ResourceNotFoundException",
+                  "createMerchantAccount");
+              return new ResourceNotFoundException(
+                  "Merchant not found with id: " + createAccountDTO.getOwnerId());
+            }));
 
     Account account = new Account();
     account.setType(createAccountDTO.getType());
@@ -171,10 +219,24 @@ public class AccountService {
           createAccountDTO.getAvailableLimit());
     }
 
-    Account savedAccount = accountRepository.save(account);
+    Account savedAccount = metricsService.recordRepositoryExecutionTime(
+        "AccountRepository", "save",
+        () -> accountRepository.save(account));
+
     log.info(
         "Service: Account created successfully for merchant ID: {}, account number: {}, type: {}",
         merchant.getId(), savedAccount.getAccountNumber(), savedAccount.getType());
+
+    // Registrar métricas
+    metricsService.recordAccountCreated(savedAccount.getType().toString(), "MERCHANT");
+
+    // Registrar o depósito inicial se houver
+    if (createAccountDTO.getInitialDeposit() != null
+        && createAccountDTO.getInitialDeposit().compareTo(BigDecimal.ZERO) > 0) {
+      metricsService.recordTransactionProcessed("DEPOSIT",
+          createAccountDTO.getInitialDeposit(), true);
+      metricsService.recordDailyFinancialVolume("DEPOSIT", createAccountDTO.getInitialDeposit());
+    }
 
     return convertToDTO(savedAccount);
   }
@@ -185,22 +247,33 @@ public class AccountService {
 
     if (amount.compareTo(BigDecimal.ZERO) <= 0) {
       log.warn("Service: Invalid deposit amount: {}", amount);
+      metricsService.recordExceptionOccurred("IllegalArgumentException", "deposit");
       throw new IllegalArgumentException("Deposit amount must be positive");
     }
 
-    Account account = accountRepository.findByAccountNumberWithLock(accountNumber)
-        .orElseThrow(() -> {
-          log.error("Service: Account not found with number: {}", accountNumber);
-          return new ResourceNotFoundException("Account not found with number: " + accountNumber);
-        });
+    Account account = metricsService.recordRepositoryExecutionTime(
+        "AccountRepository", "findByAccountNumberWithLock",
+        () -> accountRepository.findByAccountNumberWithLock(accountNumber)
+            .orElseThrow(() -> {
+              log.error("Service: Account not found with number: {}", accountNumber);
+              metricsService.recordExceptionOccurred("ResourceNotFoundException", "deposit");
+              return new ResourceNotFoundException(
+                  "Account not found with number: " + accountNumber);
+            }));
 
     BigDecimal previousBalance = account.getBalance();
     account.setBalance(previousBalance.add(amount));
-    Account updatedAccount = accountRepository.save(account);
+    Account updatedAccount = metricsService.recordRepositoryExecutionTime(
+        "AccountRepository", "save",
+        () -> accountRepository.save(account));
 
     log.info(
         "Service: Deposit successful for account: {}, amount: {}, previous balance: {}, new balance: {}",
         accountNumber, amount, previousBalance, updatedAccount.getBalance());
+
+    // Registrar métricas de depósito
+    metricsService.recordTransactionProcessed("DEPOSIT", amount, true);
+    metricsService.recordDailyFinancialVolume("DEPOSIT", amount);
 
     return convertToDTO(updatedAccount);
   }
@@ -211,29 +284,42 @@ public class AccountService {
 
     if (amount.compareTo(BigDecimal.ZERO) <= 0) {
       log.warn("Service: Invalid withdrawal amount: {}", amount);
+      metricsService.recordExceptionOccurred("IllegalArgumentException", "withdraw");
       throw new IllegalArgumentException("Withdrawal amount must be positive");
     }
 
-    Account account = accountRepository.findByAccountNumberWithLock(accountNumber)
-        .orElseThrow(() -> {
-          log.error("Service: Account not found with number: {}", accountNumber);
-          return new ResourceNotFoundException("Account not found with number: " + accountNumber);
-        });
+    Account account = metricsService.recordRepositoryExecutionTime(
+        "AccountRepository", "findByAccountNumberWithLock",
+        () -> accountRepository.findByAccountNumberWithLock(accountNumber)
+            .orElseThrow(() -> {
+              log.error("Service: Account not found with number: {}", accountNumber);
+              metricsService.recordExceptionOccurred("ResourceNotFoundException", "withdraw");
+              return new ResourceNotFoundException(
+                  "Account not found with number: " + accountNumber);
+            }));
 
     if (account.getBalance().compareTo(amount) < 0) {
       log.warn(
           "Service: Insufficient funds for withdrawal. Account: {}, balance: {}, requested amount: {}",
           accountNumber, account.getBalance(), amount);
+      metricsService.recordExceptionOccurred("InsufficientFundsException", "withdraw");
+      metricsService.recordTransactionProcessed("WITHDRAWAL", amount, false);
       throw new InsufficientFundsException("Insufficient funds for withdrawal");
     }
 
     BigDecimal previousBalance = account.getBalance();
     account.setBalance(previousBalance.subtract(amount));
-    Account updatedAccount = accountRepository.save(account);
+    Account updatedAccount = metricsService.recordRepositoryExecutionTime(
+        "AccountRepository", "save",
+        () -> accountRepository.save(account));
 
     log.info(
         "Service: Withdrawal successful for account: {}, amount: {}, previous balance: {}, new balance: {}",
         accountNumber, amount, previousBalance, updatedAccount.getBalance());
+
+    // Registrar métricas de saque
+    metricsService.recordTransactionProcessed("WITHDRAWAL", amount, true);
+    metricsService.recordDailyFinancialVolume("WITHDRAWAL", amount);
 
     return convertToDTO(updatedAccount);
   }
@@ -242,19 +328,28 @@ public class AccountService {
   public AccountDTO updateAccountStatus(Long id, Account.AccountStatus status) {
     log.debug("Service: Updating status of account with ID: {} to {}", id, status);
 
-    Account account = accountRepository.findById(id)
-        .orElseThrow(() -> {
-          log.error("Service: Account not found with ID: {}", id);
-          return new ResourceNotFoundException("Account not found with id: " + id);
-        });
+    Account account = metricsService.recordRepositoryExecutionTime(
+        "AccountRepository", "findById",
+        () -> accountRepository.findById(id)
+            .orElseThrow(() -> {
+              log.error("Service: Account not found with ID: {}", id);
+              metricsService.recordExceptionOccurred("ResourceNotFoundException",
+                  "updateAccountStatus");
+              return new ResourceNotFoundException("Account not found with id: " + id);
+            }));
 
     Account.AccountStatus previousStatus = account.getStatus();
     account.setStatus(status);
-    Account updatedAccount = accountRepository.save(account);
+    Account updatedAccount = metricsService.recordRepositoryExecutionTime(
+        "AccountRepository", "save",
+        () -> accountRepository.save(account));
 
     log.info(
         "Service: Account status updated successfully. Account ID: {}, previous status: {}, new status: {}",
         id, previousStatus, status);
+
+    // Registrar métrica de atualização de status
+    metricsService.recordAccountStatusUpdate(previousStatus.toString(), status.toString());
 
     return convertToDTO(updatedAccount);
   }
